ci(github): Upload Trivy scan report as an artifact
This commit adds a step to the `Trivy-Scan` job in the backend CI workflow to upload the generated security report as a workflow artifact.

This allows for easier access and analysis of the scan results, particularly when the workflow fails due to discovered vulnerabilities. The step is configured with `if: always()` to ensure the report is available for debugging even if the scan step itself fails.

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -122,7 +122,13 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
           output: 'trivy-report.txt'
-      
+      - name: Upload Trivy report (optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-frontend-report
+          path: trivy-report.txt
+        if: always()
+        
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
