--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -1,10 +1,10 @@
-name: Frontend CD
+name: Backend CD
 
 on:
   workflow_dispatch:
-  
+
 concurrency:
-  group: frontend-cd-${{ github.ref }}
+  group: backend-cd-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
@@ -13,27 +13,26 @@ permissions:
   packages: write
 
 jobs:
-
   Push-Image:
     name: Push Image to Dockerhub
     runs-on: ubuntu-latest
 
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          name: frontend-image-clean
+          name: backend-image-clean
 
       - name: Load Docker Image
         run: |
-          docker load -i front_ci_build.tar
-      
+          docker load -i backend_ci_build.tar
+
       - name: Dockerhub Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME}}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
-        
+
       - name: Tag Docker Image
         run: |
           docker tag frontend:ci-build ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
@@ -41,7 +40,3 @@ jobs:
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
-
-      
-
-      
