--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -69,8 +69,8 @@ jobs:
         working-directory: backend
         run: npm test -- --watch=false
 
-  Build: 
-    name: Build Docker image
+  Build-Scan: 
+    name: Build and Scan Docker image
     runs-on: ubuntu-latest
     needs: Test
 
@@ -87,31 +87,6 @@ jobs:
           -t backend:ci-build \
           ./backend
 
-      - name: Save image as artifact
-        run: |
-          docker save backend:ci-build -o backend_build_ci.tar
-
-      - name: Upload image as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-image
-          path: backend_build_ci.tar
-
-  Scan-Image:
-    name: Scan Docker Image
-    runs-on: ubuntu-latest
-    needs: Build
-
-    steps:
-      - name: Download Image Artifact
-        uses: actions/download-artifact@v4
-        with: 
-          name: backend-image
-      
-      - name: Load Docker Image
-        run: |
-          docker load -i backend_build_ci.tar
-      
       - name: Run Trivy Scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -128,11 +103,20 @@ jobs:
           name: trivy-frontend-report
           path: trivy-report.txt
         if: always()
-        
+      - name: Save image as artifact
+        run: |
+          docker save backend:ci-build -o backend_build_ci.tar
+
+      - name: Upload image as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-image-clean
+          path: backend_build_ci.tar
+
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
-    needs: [Lint, Test, Build, Scan-Image]
+    needs: [Lint, Test, Build-Scan]
     if: always()
 
     steps:
@@ -146,8 +130,7 @@ jobs:
 
             🧹 Lint Test: ${{ needs.Lint.result }}
             🧪 Unit Test: ${{ needs.Test.result }}
-            🔨 Docker Image Build: ${{ needs.Build.result }}
-            🛡️ Image Scan: ${{ needs.Scan-Image.result }}
+            🔨 Docker Image Build: ${{ needs.Build-Scan.result }}
 
             🔁 Branch: `${{ github.ref_name }}`
             🧑‍💻 Triggered by: `${{ github.actor }}`
