--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -73,8 +73,8 @@ jobs:
         working-directory: frontend
         run: npm test -- --watch=false
 
-  Build:
-    name: Build Docker Image
+  Build-Scan:
+    name: Build And Scan Docker Image
     runs-on: ubuntu-latest
     needs: Test
 
@@ -90,32 +90,6 @@ jobs:
           docker build \
           -t frontend:ci-build \
           ./frontend
-
-      - name: Save image as artifact
-        run: |
-          docker save frontend:ci-build -o frontend_ci_build.tar
-
-      - name: Upload Image Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-image
-          path: frontend_ci_build.tar
-
-  Scan-Image:
-    name: Scan Docker Image
-    runs-on: ubuntu-latest
-    needs: Build
-
-    steps: 
-      - name: Download image artifact 
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-image
-
-      - name: Load Docker Image
-        run: | 
-          docker load -i frontend_ci_build.tar
-
       - name: Run Trivy vulnurability scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -134,10 +108,22 @@ jobs:
           name: trivy-frontend-report
           path: trivy-report.txt
         if: always()
+      - name: Save image as artifact
+        if: success()
+        run: |
+          docker save frontend:ci-build -o frontend_ci_build.tar
+
+      - name: Upload Image Artifact
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-image-clean
+          path: frontend_ci_build.tar
+
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
-    needs: [Lint, Test, Build, Scan-Image]
+    needs: [Lint, Test, Build-Scan]
     if: always()
 
     steps:
@@ -151,8 +137,7 @@ jobs:
 
             🧹 Lint Test: ${{ needs.Lint.result }}
             🧪 Unit Test: ${{ needs.Test.result }}
-            🔨 Docker Image Build: ${{ needs.Build.result }}
-            🛡️ Image Scan: ${{ needs.Scan-Image.result }}
+            🔨 Docker Image Build: ${{ needs.Build-Scan.result }}
 
             🔁 Branch: `${{ github.ref_name }}`
             🧑‍💻 Triggered by: `${{ github.actor }}`
