ci: Reduce Trivy severity to CRITICAL for frontend builds
This change updates the Trivy scan in the frontend CI workflow to only report vulnerabilities with a CRITICAL severity. This is done to reduce noise from HIGH severity vulnerabilities that are often not actionable or false positives in the context of frontend dependencies, allowing for a more focused review on the most critical security issues.

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -102,7 +102,7 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
           output: 'trivy-report.txt'
 
       # Optional step to upload the Trivy report as an artifact
